--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,8 @@
 RewriteEngine On
 RewriteCond %{HTTPS} !=on
 RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
+
+
+RewriteCond %{REQUEST_FILENAME} !-f
+
+RewriteRule ^([^\.]+)$ $1.html [NC,L]
